[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

# For cargo expand --test current
[[test]]
name = "current"
path = "tests/07-repeated-field.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"
# extra-traits includes Debug implementations for AST node
syn = { version = "1.0.31", features = ["derive", "extra-traits", "visit"] }
